--- a/public/css/theme/moon.css
+++ b/public/css/theme/moon.css
@@ -2,8 +2,8 @@
  * Solarized Dark theme for reveal.js.
  * Author: Achim Staebler
  */
-@import url(../../lib/font/league-gothic/league-gothic.css);
-@import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic);
+@import 'https://fonts.googleapis.com/css?family=Lato|Roboto';
+
 /**
  * Solarized colors by Ethan Schoonover
  */
@@ -45,11 +45,10 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #eee8d5;
-  font-family: "League Gothic", Impact, sans-serif;
+  font-family: "Roboto", Impact, sans-serif;
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal;
-  text-transform: uppercase;
   text-shadow: none;
   word-wrap: break-word; }
 
