--- a/public/css/extra.css
+++ b/public/css/extra.css
@@ -4,7 +4,7 @@
 
 body {
   font-family: 'Gilda Display', serif;
-  background-color: #561420;
+  background-color: white;
   color: 333333 }
 
 h1,h2,h3 {  font-family: 'Josefin Slab', serif;  }
@@ -12,19 +12,21 @@ h1,h2,h3 {  font-family: 'Josefin Slab', serif;  }
 h1 {  font-size:3.5em; }
 h2 {  font-size:2.5em; }
 
-header { background-color: #CCCCCC;
+header { background-color: white;
                 padding:40px; }
 
-footer { background-color: #CCCCCC;
+footer { background-color: white;
          padding:20px; }
 
 .units-row { margin:20px}
 
-.unit-50, .unit-30, .unit-70, .unit-40, .unit-60, .unit-10, .unit-80 { background-color: #C59A6F;
-                               border-width: 2px;
-                               border-radius: 20px;
-                               padding:20px
-                               }
+.unit-50, .unit-30, .unit-70, .unit-40, .unit-60, .unit-10, .unit-80, .unit-90 
+{ 
+  background-color: white;
+  border-width: 2px;
+  border-radius: 20px;
+  padding:20px
+  }
 
 
 
